# Mastering-Agentic-AI-Week6

./: .gitignore
Nemo-Guardrails/: .env.example  README.md  nemo_guardrails_deepdive.ipynb  pyproject.toml
Nemo-Guardrails/aria/: __init__.py  agent.py  attacks.py  config.py  guardrails.py  knowledge_base.py  prompts.py  tools.py
Nemo-Guardrails/guardrails_configs/01_self_check_input/: config.yml  prompts.yml
Nemo-Guardrails/guardrails_configs/02_self_check_output/: config.yml  prompts.yml
Nemo-Guardrails/guardrails_configs/03_jailbreak_heuristics/: config.yml
Nemo-Guardrails/guardrails_configs/04_nim_content_safety/: config.yml
Nemo-Guardrails/guardrails_configs/05a_pii_gliner_detect/: config.yml
Nemo-Guardrails/guardrails_configs/05b_pii_gliner_mask/: config.yml
PII-Redaction/: FLOW.md  README.md  agent.py  app.py  db.py  pii_demo.ipynb  pii_handler.py  prompt.py  pyproject.toml  tools.py
PII-Redaction/pages/: hospital_dashboard.py  staff_agent.py
Promptfoo-main/healthcare/: README.md  demo.ipynb  package-lock.json  package.json  patients.db  pyproject.toml
Promptfoo-main/healthcare/pre_appointment_agent/: __init__.py  agent.py  config.py  database.py  defenses.py  knowledge_base.py  server.py  tools.py
Promptfoo-main/healthcare/redteam/: redteam.yaml  redteam_standard.yaml  redteam_with_skills.yaml
Promptfoo-main/healthcare/redteam/custom/: redteam.yaml  redteam_custom.yaml
Promptfoo-main/healthcare/redteam/custom/plugins/: emotional-patient-record-pretext.yaml
Promptfoo-main/healthcare/redteam/custom/strategies/: hospital-emergency-emotional.js
