[project]
name = "aria-nemo-guardrails"
version = "0.1.0"
description = "NeMo Guardrails deep-dive: securing the ARIA banking agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nemoguardrails>=0.11.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
# Config 3 (local jailbreak-detection heuristics) needs torch + transformers (~3GB).
heuristics = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
# For running the demo notebook.
notebook = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aria"]
