[project]
name = "pre-appointment-agent"
version = "0.1.0"
description = "Pre-Appointment Briefing Agent — a defended clinical RAG assistant (LangChain + GPT-4o-mini + FAISS + SQLite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "faiss-cpu>=1.8",
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
]

[project.scripts]
pre-appointment-server = "pre_appointment_agent.server:main"

[dependency-groups]
dev = [
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pre_appointment_agent"]
